// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyboardKey > renders a <kbd> element with element child 1`] = `
<DocumentFragment>
  <kbd
    class="key"
  >
    <strong>
      foo
    </strong>
  </kbd>
</DocumentFragment>
`;

exports[`KeyboardKey > renders a <kbd> element with icon and title 1`] = `
<DocumentFragment>
  <kbd
    class="key key-icon"
    title="foo"
  >
    <svg
      data-icon="[object Object]"
      data-icon-source="test"
    />
  </kbd>
</DocumentFragment>
`;

exports[`KeyboardKey > renders a <kbd> element with string child 1`] = `
<DocumentFragment>
  <kbd
    class="key"
  >
    foo
  </kbd>
</DocumentFragment>
`;
